Дополнен раздел Posts. Завершон раздел Roles. Мелкие правки. 1. [+] Добавлен и реализован метод /updPosts, позволяющий обновлять наименование и описание должностей в общем списке. 2. [~] Добавлена проверка подтверждения регистрации родителей в каждом методе. 3. [+] Реализован метод /getRoles (Admin), позволяющий получить список ролей. 4. [+] Реализован метод /getUserRoles (Admin), позволяющий получить список ролей конкретного пользователя. 5. [+] Реализован метод /addUserRoles (Admin), позволяющий добавить роли конкретного пользователя (сотрудника). 6. [+] Реализован метод /delUserRoles (Admin), позволяющий удалять роли конкретного пользователя (сотрудника).
